add word alignment data!

--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -26,7 +26,7 @@
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vishnesh', 'rachel', 'ayush', 'vinayak'}\n",
+      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
       "\n"
      ]
     },
@@ -35,18 +35,18 @@
      "output_type": "stream",
      "text": [
       "180: simpeval-22/Muss\n",
-      "180: simpeval-22/Human-1-written\n",
-      "180: simpeval-22/GPT-3-few-shot\n",
-      "180: simpeval-22/Human-2-written\n",
-      "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/T5-3B\n",
       "180: simpeval-22/GPT-3-zero-shot\n",
+      "180: simpeval-22/GPT-3-few-shot\n",
+      "180: simpeval-22/Human-2-written\n",
+      "180: simpeval-22/Human-1-written\n",
+      "180: simpeval-22/T5-11B\n",
       "\n",
-      "120: simpeval-ext/T5-11B\n",
       "120: simpeval-ext/Muss\n",
+      "120: simpeval-ext/T5-11B\n",
       "120: simpeval-ext/GPT-3-few-shot\n",
-      "120: simpeval-ext/Human-2-written\n",
       "120: simpeval-ext/T5-3B\n",
+      "120: simpeval-ext/Human-2-written\n",
       "120: simpeval-ext/Human-1-written\n",
       "120: simpeval-ext/GPT-3-zero-shot\n"
      ]
@@ -59,6 +59,7 @@
     "import sys\n",
     "sys.path.append('../analysis')\n",
     "from utils.all import *\n",
+    "from data_util import *\n",
     "log.basicConfig(level=log.INFO)\n",
     "data = load_data('../data/inspection_rating_annotated', preprocess=False, adjudicated=True)\n",
     "\n",
@@ -104,7 +105,7 @@
      "text": [
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vishnesh', 'rachel', 'ayush', 'vinayak'}\n",
+      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -253,159 +254,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LENS uses a CSV input format:\n",
-    "\n",
-    "# original_id\n",
-    "# original\n",
-    "# generation\n",
-    "# system\n",
-    "# sentence_type\n",
-    "# rating_1\n",
-    "# rating_2\n",
-    "# rating_3\n",
-    "# rating_1_zscore\n",
-    "# rating_2_zscore\n",
-    "# rating_3_zscore\n",
-    "\n",
-    "# For our first output, we need these columns:\n",
-    "\n",
-    "# sentence_id\n",
-    "# original\n",
-    "# generation\n",
-    "# system\n",
-    "# simpeval_score\n",
-    "# salsa_score\n",
-    "# salsa_lexical_score\n",
-    "# salsa_syntax_score\n",
-    "# salsa_conceptual_score\n",
-    "# word_qe - Edits are surrounded by <bad></bad>, <good></good>\n",
-    "# word_ratings - Edits are surrounded by <3></3>, <2></2>, etc.\n",
-    "# edit_qe - Edits are surrounded by <edit></edit>\n",
-    "\n",
-    "# I want to generate the above 3 multiple times for each edit type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_tag_values(tags, family_constraint=None):\n",
-    "    # Recover word QE\n",
-    "    word_qe, word_ratings, edit_qe, edit_id, word_qe_error_types = [], [], [], [], []\n",
-    "    for tag in tags.keys():\n",
-    "        ratings = [i for j in tags[tag].values() for i in j]\n",
-    "        if family_constraint:\n",
-    "            ratings = [ann for ann in ratings if ann['family'] == family_constraint]\n",
-    "\n",
-    "        # {GOOD, BAD, OK}, bad > good > ok\n",
-    "        word_quality = 'ok'\n",
-    "        if any([edit['word_qe'] == 'bad' for edit in ratings]):\n",
-    "            word_quality = 'bad'\n",
-    "        elif any([edit['word_qe'] == 'good' for edit in ratings]):\n",
-    "            word_quality = 'good'\n",
-    "        word_qe += [word_quality]\n",
-    "\n",
-    "        # {GOOD, BAD, BAD_CMPLX, BAD_DEL, OK}, bad > good > ok\n",
-    "        word_quality = 'ok'\n",
-    "        if any([edit['word_qe'] == 'bad' for edit in ratings]):\n",
-    "            word_quality = 'bad'\n",
-    "            if any([edit['error_type'] == Error.COMPLEX_WORDING for edit in ratings]):\n",
-    "                word_quality = 'bad_cmplx'\n",
-    "            elif any([edit['error_type'] == Error.BAD_DELETION for edit in ratings]):\n",
-    "                word_quality = 'bad_del'\n",
-    "        elif any([edit['word_qe'] == 'good' for edit in ratings]):\n",
-    "            word_quality = 'good'\n",
-    "        word_qe_error_types += [word_quality]\n",
-    "\n",
-    "        # [-3, 3], greater magnitude takes prioirty\n",
-    "        word_rating = 0\n",
-    "        if len(ratings) != 0:\n",
-    "            word_rating = max([edit['word_rating'] for edit in ratings if edit['word_rating'] is not None] + [0], key=abs)\n",
-    "        word_ratings += [word_rating]\n",
-    "\n",
-    "        # {EDIT, NO EDIT}, edit > no edit\n",
-    "        edit_qe += ['edit' if any([edit['edit_qe'] for edit in ratings]) else 'noedit']\n",
-    "\n",
-    "        # {BAD, OK}, bad > ok\n",
-    "        word_id = 'ok'\n",
-    "        if any([edit['word_qe'] == 'bad' for edit in ratings]):\n",
-    "            word_id = 'bad'\n",
-    "        edit_id += [word_id]\n",
-    "    return {\n",
-    "        'word_qe': word_qe, \n",
-    "        'word_ratings': word_ratings, \n",
-    "        'edit_qe': edit_qe,\n",
-    "        'edit_id': edit_id,\n",
-    "\n",
-    "        'word_qe_error_types': word_qe_error_types\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tag_priority = ['substitution', 'insertion', 'deletion'] # last values are high priority\n",
-    "tag_map = {\n",
-    "    'substitution': 'sub',\n",
-    "    'insertion': 'ins',\n",
-    "    'deletion': 'del',\n",
-    "    None: 'ok'\n",
-    "}\n",
-    "def get_edit_values(tags):\n",
-    "    edit_types = []\n",
-    "\n",
-    "    for tag in tags.keys():\n",
-    "        tag_edit_types = list(tags[tag].keys())\n",
-    "        added_tag = None\n",
-    "        for t in tag_priority:\n",
-    "            if t in tag_edit_types:\n",
-    "                added_tag = t\n",
-    "        edit_types += [tag_map[added_tag]]\n",
-    "\n",
-    "    return {\n",
-    "        'edit_types': edit_types\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Recover the sentence iteratively, as in only switch tags when the\n",
-    "# array value has changed\n",
-    "def write_tagged_sentence(sent, tags, tag_values):\n",
-    "    prev_value = None\n",
-    "    orig = sent\n",
-    "    out = \"\"\n",
-    "    for i, span in enumerate(list(tags.keys())):\n",
-    "        curr_value = tag_values[i]\n",
-    "        if prev_value == None:\n",
-    "            out += f\"<{curr_value}>\"\n",
-    "        elif prev_value != curr_value:\n",
-    "            out += f\"</{prev_value}> <{curr_value}>\"\n",
-    "        else:\n",
-    "            out += \" \"\n",
-    "\n",
-    "        out += f'{orig[span[0]:span[1]]}'\n",
-    "\n",
-    "        prev_value = curr_value\n",
-    "    out += f'</{prev_value}>'\n",
-    "    return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Add LENS scores\n",
     "with open('../lens/4-scores.json', 'r') as f:\n",
     "    scores = json.load(f)\n",
@@ -425,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,12 +354,17 @@
     "                f'{tag_type}_{sentence_type}': tag_value\n",
     "            })\n",
     "\n",
+    "    # Generate traditional alignment setup\n",
+    "    entry.update({\n",
+    "        'alignment': get_word_alignment_string(sent)\n",
+    "    })\n",
+    "\n",
     "    out_file += [entry]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -534,24 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "\n",
-    "def write_csv(filename, data):\n",
-    "    headers = list(data[0].keys())\n",
-    "    with open(filename, 'w', newline='', encoding='utf-8') as f:\n",
-    "        writer = csv.DictWriter(f, fieldnames=headers)\n",
-    "        writer.writeheader()\n",
-    "        for row in data:\n",
-    "            writer.writerow(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,97 +409,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Write data in word alignment format to .tsv\n",
-    "\"\"\"\n",
-    "def write_tsv_align(file_path, data):\n",
-    "    align_out = []\n",
-    "    for i, s in enumerate(data):\n",
-    "        align_out += [[\n",
-    "            f'{i}:{i}',\n",
-    "            s['src'],\n",
-    "            'N/A',\n",
-    "            s['mt'],\n",
-    "            'N/A', '1', '1',\n",
-    "            s['alignment'],\n",
-    "            'N/A',\n",
-    "        ]]\n",
-    "\n",
-    "    with open(file_path, \"w\") as f:\n",
-    "        for r in align_out:\n",
-    "            f.write(f\"{\"\\t\".join(r)}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_tsv_align('salsa/lens-salsa-training/train-align.tsv', [s for s in out_file if s['src'] in src_sents_train])\n",
     "write_tsv_align('salsa/lens-salsa-training/valid-align.tsv', [s for s in out_file if s['src'] in src_sents_val])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# You may need to tokenize by punctuation as well? But for now only by spaces\n",
-    "\n",
-    "# Each word is aligned in the format C-S, if the alignment doesn't exist, it implies\n",
-    "# a deletion or insertion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To create data format for Neural Janaca, it works a bit different. Here's some example\n",
-    "# data:\n",
-    "\n",
-    "# It exists in this format: ID, sent1, _, sent2, _, _, _, sure_align, poss_align\n",
-    "# Important to note tokenization is performed via spaces\n",
-    "\n",
-    "# sure_align = sure alignments\n",
-    "# poss_align = possible alignments\n",
-    "# In Chao's paper, he uses sure+poss as the default evaluation setup.\n",
-    "\n",
-    "# 0:0\n",
-    "# Today there are only around 20,000 wild lions left in the world .\n",
-    "# N/A\n",
-    "# By one estimate , fewer than 20,000 lions exist in the wild , a drop of about 40 percent in the past two decades .\n",
-    "# N/A\n",
-    "# 1\n",
-    "# 1\n",
-    "# 5-6 6-11 7-7 8-8 9-9 10-10 12-24\n",
-    "# 0-0 0-1 0-2 3-4 3-5 4-4 4-5\n",
-    "\n",
-    "# 1:1\n",
-    "# Other experts say there is little proof that grass-fed beef is healthier .\n",
-    "# N/A\n",
-    "# \" There 's little definitive data to suggest grass-fed beef is healthier for you , \" said Chad Carr , an associate professor in the university 's department of animal sciences .\n",
-    "# N/A\n",
-    "# 1\n",
-    "# 1\n",
-    "# 2-16 3-1 4-2 5-3 6-4 6-5 8-8 9-9 10-10 11-11 12-31\n",
-    "# 1-17 1-18 7-6 7-7\n",
-    "\n",
-    "# 2:2\n",
-    "# Lindsey Carillo , 31 , grew up in a suburb but wanted to expose her kids to city life .\n",
-    "# N/A\n",
-    "# Lindsey Carillo , 31 , grew up in a suburb of Detroit but wanted to expose her kids to city living .\n",
-    "# N/A\n",
-    "# 1\n",
-    "# 1\n",
-    "# 0-0 1-1 2-2 3-3 4-4 5-5 6-6 7-7 8-8 9-9 10-12 11-13 12-14 13-15 14-16 15-17 16-18 17-19 18-20 19-21"
    ]
   }
  ],
