modified word aligment dataloader

--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -11,52 +11,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "DEBUG:matplotlib data path: C:\\Users\\heine\\AppData\\Roaming\\Python\\Python39\\site-packages\\matplotlib\\mpl-data\n",
+      "DEBUG:CONFIGDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:interactive is False\n",
+      "DEBUG:platform is win32\n",
+      "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "180: simpeval-22/Muss\n",
-      "180: simpeval-22/T5-3B\n",
-      "180: simpeval-22/GPT-3-zero-shot\n",
-      "180: simpeval-22/GPT-3-few-shot\n",
-      "180: simpeval-22/Human-2-written\n",
-      "180: simpeval-22/Human-1-written\n",
-      "180: simpeval-22/T5-11B\n",
       "\n",
-      "120: simpeval-ext/Muss\n",
-      "120: simpeval-ext/T5-11B\n",
-      "120: simpeval-ext/GPT-3-few-shot\n",
+      "INFO:Found users: {'vinayak', 'rachel', 'ayush', 'vishnesh'}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180: simpeval-22/T5-11B\n",
+      "180: simpeval-22/Muss\n",
+      "180: simpeval-22/Human-2-written\n",
+      "180: simpeval-22/GPT-3-few-shot\n",
+      "180: simpeval-22/T5-3B\n",
+      "180: simpeval-22/Human-1-written\n",
+      "180: simpeval-22/GPT-3-zero-shot\n",
+      "\n",
       "120: simpeval-ext/T5-3B\n",
       "120: simpeval-ext/Human-2-written\n",
+      "120: simpeval-ext/Muss\n",
       "120: simpeval-ext/Human-1-written\n",
-      "120: simpeval-ext/GPT-3-zero-shot\n"
+      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/T5-11B\n",
+      "120: simpeval-ext/GPT-3-few-shot\n"
      ]
     }
    ],
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +105,7 @@
      "text": [
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
+      "INFO:Found users: {'vinayak', 'rachel', 'ayush', 'vishnesh'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -258,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +357,11 @@
     "    # Generate traditional alignment setup\n",
     "    entry.update({\n",
     "        'alignment': get_word_alignment_string(sent),\n",
-    "        'alignment-no-phrases': get_word_alignment_string(sent, collapse_phrase_alignment=True)\n",
+    "        'alignment-no-phrases': get_word_alignment_string(sent, collapse_phrase_alignment=True),\n",
+    "        'alignment-error-labels-input': ' '.join(get_tag_values(get_annotations_per_token([sent], 'original', \\\n",
+    "            remove_none=False, tagging=True))['word_qe_error_types']),\n",
+    "        'alignment-error-labels-output': ' '.join(get_tag_values(get_annotations_per_token([sent], 'simplified', \\\n",
+    "            remove_none=False, tagging=True))['word_qe_error_types']),\n",
     "    })\n",
     "\n",
     "    out_file += [entry]"
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +424,60 @@
     "\n",
     "write_tsv_align('salsa/lens-salsa-training/train-align-collapsed.tsv', [s for s in out_file if s['src'] in src_sents_train], collapse_phrase_alignment=True)\n",
     "write_tsv_align('salsa/lens-salsa-training/valid-align-collapsed.tsv', [s for s in out_file if s['src'] in src_sents_val], collapse_phrase_alignment=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent = data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0-0 0-1 0-2 1-0 1-1 1-2 2-0 2-1 2-2 3-0 3-1 3-2 4-0 4-1 4-2 5-3 6-4 7-5 8-5 9-6 10-7 11-8 12-11 14-12 15-13 16-14 17-15 18-16 19-17 19-18 19-19 19-20 19-21 20-17 20-18 20-19 20-20 20-21 21-17 21-18 21-19 21-20 21-21 22-22 23-23 24-24 24-25 25-33 26-34 26-35 27-36 28-37 29-38 30-39 31-40 32-41 33-42 34-43 35-44 36-45 37-46 38-47 39-48 40-49 41-50 42-51 45-26 45-27 45-28 45-29 46-26 46-27 46-28 46-29 47-26 47-27 47-28 47-29 48-26 48-27 48-28 48-29 49-26 49-27 49-28 49-29 50-26 50-27 50-28 50-29 51-26 51-27 51-28 51-29 52-26 52-27 52-28 52-29 53-26 53-27 53-28 53-29'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collapse_phrase_alignment = False\n",
+    "\n",
+    "orig_tags = get_annotations_per_token([sent], 'original', collapse_composite=True, remove_reorder=True, \\\n",
+    "    remove_none=False, get_alignment=True)\n",
+    "simp_tags = get_annotations_per_token([sent], 'simplified', collapse_composite=True, remove_reorder=True, \\\n",
+    "    remove_none=False, get_alignment=True)\n",
+    "\n",
+    "word_alignment = get_word_alignment(orig_tags, simp_tags, sent)\n",
+    "alignment = align_edits(word_alignment, orig_tags, simp_tags, sent, collapse_phrase_alignment)\n",
+    "\n",
+    "orig_tags = get_annotations_per_token([sent], 'original', collapse_composite=True, remove_reorder=True, \\\n",
+    "    remove_none=False)\n",
+    "simp_tags = get_annotations_per_token([sent], 'simplified', collapse_composite=True, remove_reorder=True, \\\n",
+    "    remove_none=False)\n",
+    "\n",
+    "orig_ids = {k: i for i, k in enumerate(orig_tags.keys()) if orig_tags[k] is not set()}\n",
+    "simp_ids = {k: i for i, k in enumerate(simp_tags.keys()) if simp_tags[k] is not set()}\n",
+    "\n",
+    "' '.join([f\"{orig_ids[x[0]]}-{simp_ids[x[1]]}\" for x in alignment])"
    ]
   }
  ],
