add last batch!!!

--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -26,7 +26,7 @@
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vinayak', 'rachel', 'ayush', 'vishnesh'}\n",
+      "INFO:Found users: {'rachel', 'ayush', 'vinayak', 'vishnesh'}\n",
       "\n"
      ]
     },
@@ -34,21 +34,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180: simpeval-22/T5-11B\n",
-      "180: simpeval-22/Muss\n",
-      "180: simpeval-22/Human-2-written\n",
-      "180: simpeval-22/GPT-3-few-shot\n",
-      "180: simpeval-22/T5-3B\n",
       "180: simpeval-22/Human-1-written\n",
+      "180: simpeval-22/T5-11B\n",
+      "180: simpeval-22/T5-3B\n",
+      "180: simpeval-22/Human-2-written\n",
       "180: simpeval-22/GPT-3-zero-shot\n",
+      "180: simpeval-22/Muss\n",
+      "180: simpeval-22/GPT-3-few-shot\n",
       "\n",
-      "120: simpeval-ext/T5-3B\n",
       "120: simpeval-ext/Human-2-written\n",
       "120: simpeval-ext/Muss\n",
-      "120: simpeval-ext/Human-1-written\n",
       "120: simpeval-ext/GPT-3-zero-shot\n",
-      "120: simpeval-ext/T5-11B\n",
-      "120: simpeval-ext/GPT-3-few-shot\n"
+      "120: simpeval-ext/T5-3B\n",
+      "120: simpeval-ext/GPT-3-few-shot\n",
+      "120: simpeval-ext/Human-1-written\n",
+      "120: simpeval-ext/T5-11B\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
      "text": [
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vinayak', 'rachel', 'ayush', 'vishnesh'}\n",
+      "INFO:Found users: {'rachel', 'ayush', 'vinayak', 'vishnesh'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,15 +432,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sent = data[0]"
-   ]
   },
   {
    "cell_type": "code",
