--- a/data/inspection-to-rating.ipynb
+++ b/data/inspection-to-rating.ipynb
@@ -33,9 +33,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:Loading files: ['test_set_inspection_annotated/batch_1_ayush.json', 'test_set_inspection_annotated/batch_1_rachel.json', 'test_set_inspection_annotated/batch_1_vinayak.json', 'test_set_inspection_annotated/batch_1_vishnesh.json', 'test_set_inspection_annotated/batch_2_ayush.json', 'test_set_inspection_annotated/batch_2_rachel.json', 'test_set_inspection_annotated/batch_2_vishnesh.json']\n",
+      "INFO:Loading files: ['test_set_inspection_annotated/batch_1_ayush.json', 'test_set_inspection_annotated/batch_1_rachel.json', 'test_set_inspection_annotated/batch_1_vinayak.json', 'test_set_inspection_annotated/batch_1_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
+      "INFO:Found users: {'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
       "\n"
      ]
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,26 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Should assign 85 per annotator if we are assigning equally"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vinayak: 150\n",
-      "ayush: 120\n",
-      "rachel: 120\n",
-      "vishnesh: 120\n"
+      "vishnesh: 106\n",
+      "vinayak: 106\n",
+      "ayush: 104\n",
+      "rachel: 104\n"
      ]
     }
    ],
@@ -118,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Saves rating task\n",
-    "batch_size = 140\n",
+    "batch_size = 55\n",
     "\n",
     "for user, sents in assignment.items():\n",
     "    for i in range(math.ceil(len(sents) / batch_size)):\n",
@@ -131,7 +122,7 @@
     "        if end_idx >= len(sents):\n",
     "            end_idx = len(sents)\n",
     "\n",
-    "        path = f\"inspection_rating/{user}\"\n",
+    "        path = f\"test_set_inspection_rating/{user}\"\n",
     "        if not os.path.exists(path):\n",
     "            os.makedirs(path)\n",
     "\n",
