--- a/edit_classification/prepare_data.ipynb
+++ b/edit_classification/prepare_data.ipynb
@@ -25,9 +25,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
+      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'ayush', 'vinayak', 'vishnesh', 'rachel'}\n",
+      "INFO:Found users: {'ayush', 'vishnesh', 'vinayak', 'rachel'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation.\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation.\n",
@@ -37,22 +37,24 @@
       "WARNING:rachel - Batch 2, HIT 311 (ID 931) has 4 substitution edits but 3 annotations. Likely a missing annotation.\n",
       "WARNING:rachel - Batch 2, HIT 321 (ID 961) has 9 substitution edits but 8 annotations. Likely a missing annotation.\n",
       "WARNING:rachel - Batch 2, HIT 373 (ID 1117) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:ayush - Batch 3, HIT 573 (ID 1363) has 3 reorder edits but 2 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 579 (ID 1382) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 587 (ID 1406) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 605 (ID 1460) has 5 substitution edits but 4 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 426 (ID 1518) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 475 (ID 1616) has 2 structure edits but 1 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 479 (ID 1624) has 2 deletion edits but 1 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 673 (ID 1795) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 675 (ID 1799) has 3 substitution edits but 2 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 679 (ID 1807) has 4 substitution edits but 3 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 2 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 4 substitution edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 3 reorder edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 4, HIT 692 (ID 1833) has 5 deletion edits but 4 annotations. Likely a missing annotation.\n"
+      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 3 deletion edits but 2 annotations. Likely a missing annotation.\n",
+      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 5 structure edits but 4 annotations. Likely a missing annotation.\n",
+      "WARNING:ayush - Batch 3, HIT 573 (ID 1455) has 3 reorder edits but 2 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 579 (ID 1474) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 587 (ID 1498) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 605 (ID 1552) has 5 substitution edits but 4 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 426 (ID 1635) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 475 (ID 1782) has 2 structure edits but 1 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 479 (ID 1794) has 2 deletion edits but 1 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 673 (ID 2017) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 675 (ID 2023) has 3 substitution edits but 2 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 679 (ID 2035) has 4 substitution edits but 3 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 2 deletion edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 4 substitution edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 3 reorder edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 692 (ID 2074) has 5 deletion edits but 4 annotations. Likely a missing annotation.\n"
      ]
     }
    ],
